--- a/static/index.html
+++ b/static/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <head>
   <title>Synonym Visualizer</title>
+  <link rel="stylesheet" type="text/css" href="static/css/styles.css"></link>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/async/1.4.2/async.min.js"></script>
   <script src="static/js/lib/tsne.js"></script>
-  <script src="static/index.js"></script>
+  <script src="static/js/word2vec.js"></script>
+  <script src="static/js/index.js"></script>
 </head>
-<body>
+<div>
   <input id='input-word' type='text'></input>
   <button id='input-word-submit' type='button'>Submit</button>
-</body>
-
+</div>
+<div>
+  <canvas id='synonyms-canvas' width="1000" height="650"></canvas>
+</div>
