Include query word, and better handle error cases

--- a/static/index.html
+++ b/static/index.html
@@ -27,7 +27,7 @@
       <h1>Synonym Visualizer</h1>
       <form class="form-inline" id="input-form">
         <input class="form-control" id="input-word" type="text" placeholder="word"></input>
-        <button class="btn btn-default ladda-button" id="input-word-button" data-style="expand-right" type="submit">
+        <button class="btn btn-primary ladda-button" id="input-word-button" data-style="expand-right" type="submit">
           <span class="ladda-label">Submit</span>
         </button>
       </form>
