Add bezier curves to indicate Lexicon groups

--- a/static/index.html
+++ b/static/index.html
@@ -18,6 +18,7 @@
   <!-- Javascript -->
   <script src="static/js/lib/tsne.js"></script>
   <script src="static/js/word2vec.js"></script>
+  <script src="static/js/renderer.js"></script>
   <script src="static/js/index.js"></script>
 </head>
 
