--- a/static/index.html
+++ b/static/index.html
@@ -19,6 +19,7 @@
   <script src="static/js/lib/tsne.js"></script>
   <script src="static/js/word2vec.js"></script>
   <script src="static/js/renderer.js"></script>
+  <script src="static/js/syntable.js"></script>
   <script src="static/js/index.js"></script>
 </head>
 
@@ -36,7 +37,15 @@
   </div>
   <div class="row">
     <div class="col-md-12">
-      <canvas id="synonyms-canvas" width="1200" height="800"></canvas>
+      <canvas id="synonyms-canvas" width="1200" height="700"></canvas>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-12">
+      <table id="syntable" class="table" style="display: None">
+        <thead><tr><th>Word</th><th>Source</th></thead>
+        <tbody id="syntable-body"></tbody>
+      </table>
     </div>
   </div>
 </div>
