Show synonyms in a table, scale canvas on both axes

--- a/static/index.html
+++ b/static/index.html
@@ -43,7 +43,7 @@
   <div class="row">
     <div class="col-md-12">
       <table id="syntable" class="table" style="display: None">
-        <thead><tr><th>Word</th><th>Source</th></thead>
+        <thead><tr><th></th><th></th><th>Synonyms</th><th>Source</th></thead>
         <tbody id="syntable-body"></tbody>
       </table>
     </div>
