Extract logic into controller, add URL state saving

--- a/static/index.html
+++ b/static/index.html
@@ -16,10 +16,12 @@
   <script src="static/js/lib/ladda/ladda.min.js"></script>
 
   <!-- Javascript -->
+  <script src="static/js/lib/seedrandom.js"></script>
   <script src="static/js/lib/tsne.js"></script>
   <script src="static/js/word2vec.js"></script>
   <script src="static/js/renderer.js"></script>
   <script src="static/js/syntable.js"></script>
+  <script src="static/js/controller.js"></script>
   <script src="static/js/index.js"></script>
 </head>
 
