--- a/static/index.html
+++ b/static/index.html
@@ -5,7 +5,6 @@
   <!-- Vendor -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/async/1.4.2/async.min.js"></script>
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
@@ -18,6 +17,7 @@
   <!-- Javascript -->
   <script src="static/js/lib/seedrandom.js"></script>
   <script src="static/js/lib/tsne.js"></script>
+  <script src="static/js/util.js"></script>
   <script src="static/js/word2vec.js"></script>
   <script src="static/js/renderer.js"></script>
   <script src="static/js/syntable.js"></script>
